<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/green_background"
    tools:context=".presentation.AboutFragment">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_cabinet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60sp"
        android:layout_marginStart="30sp"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="16sp"
        android:padding="10dp"
        android:background="@drawable/settings_background"
        >

        <TextView
            android:id="@+id/general_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_settings"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            app:layout_constraintTop_toBottomOf="@id/general_settings"
            android:layout_marginVertical="15dp"
            />

        <ImageView
            android:id="@+id/language_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_language"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="@id/general_settings"
            android:layout_marginVertical="30sp"
            />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/language_icon"
            app:layout_constraintTop_toTopOf="@id/language_icon"
            app:layout_constraintBottom_toBottomOf="@id/language_icon"
            android:layout_marginStart="16dp"
            android:text="@string/language"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            android:textSize="18sp"
            android:textColor="@color/green_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/language"
            app:layout_constraintBottom_toBottomOf="@id/language"
            android:layout_marginEnd="10dp"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/night_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_night_mode"
            app:layout_constraintTop_toBottomOf="@id/language_icon"
            app:layout_constraintStart_toStartOf="@id/general_settings"
            android:layout_marginVertical="30sp"
            />

        <TextView
            android:id="@+id/night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/night_icon"
            app:layout_constraintTop_toTopOf="@id/night_icon"
            app:layout_constraintBottom_toBottomOf="@id/night_icon"
            android:layout_marginStart="16dp"
            android:text="@string/night_mode"
            android:textSize="22sp" />

        <Switch
            android:id="@+id/night_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/night_icon"
            app:layout_constraintEnd_toEndOf="@id/english"
            app:layout_constraintBottom_toBottomOf="@id/night_icon" />

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="22sp"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/night_icon"
            app:layout_constraintStart_toStartOf="@id/general_settings"
            android:layout_marginVertical="30sp"
            />

        <ImageButton
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/log_out"
            app:layout_constraintEnd_toEndOf="@id/night_mode_switch"
            app:layout_constraintBottom_toBottomOf="@id/log_out"
            android:src="@drawable/icon_logout"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>