<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D682F">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
    <TextView
        android:id="@+id/solving_white_spaces"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/back_btn_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/recipe_description"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="30dp"
        >
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_btn"
            android:background="@color/teal_700"
            />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/recipe_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/back_btn_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:text="@string/topic"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@id/solving_white_spaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_description">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/details_background"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <TextView
                android:id="@+id/preparation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/preparation_time"
                android:textColor="#A2A0A0"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/leftGll"
                app:layout_constraintTop_toTopOf="@id/photo_card"
                app:layout_constraintBottom_toTopOf="@id/necessary_products"
                app:layout_constraintVertical_chainStyle="spread_inside"
                />

            <TextView
                android:id="@+id/necessary_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:text="@string/necessary_products"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/preparation_time"
                app:layout_constraintBottom_toBottomOf="@id/photo_card"
                app:layout_constraintStart_toStartOf="@id/leftGll"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/photo_card"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/recipe_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/necessary_products"
                app:layout_constraintStart_toStartOf="@id/leftGll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>
